--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
       <nav>
         <a
           class="header-logo-blue"
-          thref="index.html"
           target="_self"
           href="index.html"
           ><span>Web</span></a
         ><a
           class="header-logo-right"
-          thref="index.html"
           target="_self"
           href="index.html"
           ><span>Studio</span></a
@@ -36,46 +34,47 @@
     <main>
       <section class="main-button-place">
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <a class="main-button" href="portfolio.html" button type="button">Zamów usługe</button>
+        <a href="portfolio.html">
+          <button class="main-button" type="button">Zamów usługe</button>
         </a>
       </section>
       <section>
         <ul class="lorem-list">
           <li>
-            <span>
+            <div>
             <h4 class="lorem-h-four">LOREM IPSUM</h4>
             <p class="lorem-four">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
-            </span>
+          </div>
           </li>
           <li>
-            <span>
+            <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
-            </span>
+            </div>
           </li>
           <li>
-            <span>
+            <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
-            </span>
+            </div>
           </li>
           <li>
-            <span>
+            <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
-            </span>
+            </div>
           </li>
         </ul>
       </section>
@@ -156,8 +155,8 @@
     </main>
     <footer>
       <section class="down-section">
-      <a class="header-logo-blue" thref="index.html" target="_self" href="index.html"><span>Web</span></a><a
-        class="header-logo-right-down" thref="index.html" target="_self" href="index.html"><span>Studio</span></a>
+      <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
+        class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
       <address class="down-section">
         <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
         <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
