--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
 <body>
   <header>
     <nav>
-      <a class="header-logo-blue" thref="index.html" target="_self" href="index.html"><span>Web</span></a><a
-        class="header-logo-right" thref="index.html" target="_self" href="index.html"><span>Studio</span></a>
+      <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
+        class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
       <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
       <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
       <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
@@ -28,19 +28,19 @@
         <!-- sekcja, która zawiera listę przycisków -->
         <ul class="portfolio-button-list">
           <li>
-            <a class="portfolio-button" href="portfolio.html" button type="button">Wszystkie</button></a>
+            <a href="portfolio.html"><button class="portfolio-button" type="button">Wszystkie</button></a>
           </li>
           <li>
-            <a class="portfolio-button" href="portfolio.html" button type="button">Strony</button></a>
+            <a href="portfolio.html"><button class="portfolio-button" type="button">Strony</button></a>
           </li>
           <li>
-            <a class="portfolio-button" href="portfolio.html" button type="button">Aplikacje</button></a>
+            <a href="portfolio.html"><button class="portfolio-button" type="button">Aplikacje</button></a>
           </li>
           <li>
-            <a class="portfolio-button" href="portfolio.html" button type="button">Dizajn</button></a>
+            <a href="portfolio.html"><button class="portfolio-button" type="button">Dizajn</button></a>
           </li>
           <li>
-            <a class="portfolio-button" href="portfolio.html" button type="button">Marketing</button></a>
+            <a href="portfolio.html"><button class="portfolio-button" type="button">Marketing</button></a>
           </li>
         </ul>
       </section>
@@ -69,7 +69,7 @@
           </li>
           <li>
             <img
-              src="images/seafood restaurant.jpg"
+              src="images/seafoodrestaurant.jpg"
               width="370"
               height="294"
               alt="Picture of logo an Seafood restaurant"
@@ -141,8 +141,8 @@
       </section>
       <footer>
         <section class="down-section">
-          <a class="header-logo-blue" thref="index.html" target="_self" href="index.html"><span>Web</span></a><a
-            class="header-logo-right-down" thref="index.html" target="_self" href="index.html"><span>Studio</span></a>
+          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
+            class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
           <address class="down-section">
             <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
             <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
