--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta name="WebStudio" content="biuro projktowe + development" />
     <title>Studio</title>
     <link rel="stylesheet" href="CSS/styles.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="header-logo-blue"
-          target="_self"
-          href="index.html"
+        <a class="header-logo-blue" target="_self" href="index.html"
           ><span>Web</span></a
-        ><a
-          class="header-logo-right"
-          target="_self"
-          href="index.html"
+        ><a class="header-logo-right" target="_self" href="index.html"
           ><span>Studio</span></a
         >
         <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
+        <a class="header-portfolio" href="portfolio.html"
+          ><span>Portfolio</span></a
+        >
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
-      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+      <a class="header-links-contact" href="mailto:info@devstudio.com"
+        ><span>info@devstudio.com</span></a
+      >
+      <a class="header-links-contact" href="tel:48111111111"
+        ><span>+48 111 111 111</span></a
+      >
     </header>
     <main>
       <section class="main-button-place">
@@ -42,12 +44,12 @@
         <ul class="lorem-list">
           <li>
             <div>
-            <h4 class="lorem-h-four">LOREM IPSUM</h4>
-            <p class="lorem-four">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </div>
+              <h4 class="lorem-h-four">LOREM IPSUM</h4>
+              <p class="lorem-four">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </div>
           </li>
           <li>
             <div>
@@ -155,13 +157,18 @@
     </main>
     <footer>
       <section class="down-section">
-      <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
-        class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
-      <address class="down-section">
-        <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
-        <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
-      </address>
+        <a class="header-logo-blue" target="_self" href="index.html"
+          ><span>Web</span></a
+        ><a class="header-logo-right-down" target="_self" href="index.html"
+          ><span>Studio</span></a
+        >
+        <address class="down-section">
+          <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+          <a class="down-section-email" href="mailto:info@example.com"
+            >info@example.com</a
+          >
+          <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
+        </address>
       </section>
     </footer>
   </body>
