--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
 </head>
+
 <body>
   <header>
     <nav>
-      <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
-        class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
+      <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right"
+        target="_self" href="index.html"><span>Studio</span></a>
       <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
       <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
       <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
@@ -24,131 +25,89 @@
     <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
   </header>
   <main>
-      <section>
-        <!-- sekcja, która zawiera listę przycisków -->
-        <ul class="portfolio-button-list">
-          <li>
-            <a href="portfolio.html"><button class="portfolio-button" type="button">Wszystkie</button></a>
-          </li>
-          <li>
-            <a href="portfolio.html"><button class="portfolio-button" type="button">Strony</button></a>
-          </li>
-          <li>
-            <a href="portfolio.html"><button class="portfolio-button" type="button">Aplikacje</button></a>
-          </li>
-          <li>
-            <a href="portfolio.html"><button class="portfolio-button" type="button">Dizajn</button></a>
-          </li>
-          <li>
-            <a href="portfolio.html"><button class="portfolio-button" type="button">Marketing</button></a>
-          </li>
-        </ul>
+    <section>
+      <!-- sekcja, która zawiera listę przycisków -->
+      <ul class="portfolio-button-list">
+        <li>
+          <a href="portfolio.html"><button class="portfolio-button" type="button">Wszystkie</button></a>
+        </li>
+        <li>
+          <a href="portfolio.html"><button class="portfolio-button" type="button">Strony</button></a>
+        </li>
+        <li>
+          <a href="portfolio.html"><button class="portfolio-button" type="button">Aplikacje</button></a>
+        </li>
+        <li>
+          <a href="portfolio.html"><button class="portfolio-button" type="button">Dizajn</button></a>
+        </li>
+        <li>
+          <a href="portfolio.html"><button class="portfolio-button" type="button">Marketing</button></a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
+      <ul class="portfolio-main-section">
+        <li>
+          <img src="images/laptopwithportfolio.jpg" width="370" height="294"
+            alt="laptop with main portfolio page open" />
+          <h4 class="portfolio-h-title">Technocrack</h4>
+          <p class="portfolio-description">Strona Internetowa</p>
+        </li>
+        <li>
+          <img src="images/basketballplayers.jpg" width="370" height="294" alt="Basketball players at game" />
+          <h4 class="portfolio-h-title">Grafika New Orlean vs Golden Star</h4>
+          <p class="portfolio-description">Dizajn</p>
+        </li>
+        <li>
+          <img src="images/seafoodrestaurant.jpg" width="370" height="294"
+            alt="Picture of logo an Seafood restaurant" />
+          <h4 class="portfolio-h-title">Restaurant Seafood</h4>
+          <p class="portfolio-description">Aplikacja</p>
+        </li>
+        <li>
+          <img src="images/headphone.jpg" width="370" height="294" alt="Image of headphone" />
+          <h4 class="portfolio-h-title">Projekt Prime</h4>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+        <li>
+          <img src="images/boxes.jpg" width="370" height="294" alt="Image with project of boxes" />
+          <h4 class="portfolio-h-title">Projekt Boxes</h4>
+          <p class="portfolio-description">Aplikacja</p>
+        </li>
+        <li>
+          <img src="images/darkscreen.jpg" width="370" height="294" alt="Image of screen shows dark modern website" />
+          <h4 class="portfolio-h-title">Inspiration has no Boders</h4>
+          <p class="portfolio-description">Strona Internetowa</p>
+        </li>
+        <li>
+          <img src="images/bookwithpictures.jpg" width="370" height="294" alt="Book with pictures on pages" />
+          <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
+          <p class="portfolio-description">Dizajn</p>
+        </li>
+        <li>
+          <img src="images/label.jpg" width="370" height="294" alt="Image of label project" />
+          <h4 class="portfolio-h-title">Projeky LAB</h4>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+        <li>
+          <img src="images/workonlaptop.jpg" width="370" height="294" alt="images/workonlaptop.jpg" />
+          <h4 class="portfolio-h-title">Growing Business</h4>
+          <p class="portfolio-description">Aplikacja</p>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <section class="down-section">
+        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
+          class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
+        <address class="down-section">
+          <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+          <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
+          <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
+        </address>
       </section>
-      <section>
-        <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
-        <ul class="portfolio-main-section">
-          <li>
-            <img
-              src="images/laptopwithportfolio.jpg"
-              width="370"
-              height="294"
-              alt="laptop with main portfolio page open"
-            />
-            <h4 class="portfolio-h-title">Technocrack</h4>
-            <p class="portfolio-description">Strona Internetowa</p>
-          </li>
-          <li>
-            <img
-              src="images/basketballplayers.jpg"
-              width="370"
-              height="294"
-              alt="Basketball players at game"
-            />
-            <h4 class="portfolio-h-title">Grafika New Orlean vs Golden Star</h4>
-            <p class="portfolio-description">Dizajn</p>
-          </li>
-          <li>
-            <img
-              src="images/seafoodrestaurant.jpg"
-              width="370"
-              height="294"
-              alt="Picture of logo an Seafood restaurant"
-            />
-            <h4 class="portfolio-h-title">Restaurant Seafood</h4>
-            <p class="portfolio-description">Aplikacja</p>
-          </li>
-          <li>
-            <img
-              src="images/headphone.jpg"
-              width="370"
-              height="294"
-              alt="Image of headphone"
-            />
-            <h4 class="portfolio-h-title">Projekt Prime</h4>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/boxes.jpg"
-              width="370"
-              height="294"
-              alt="Image with project of boxes"
-            />
-            <h4 class="portfolio-h-title">Projekt Boxes</h4>
-            <p class="portfolio-description">Aplikacja</p>
-          </li>
-          <li>
-            <img
-              src="images/darkscreen.jpg"
-              width="370"
-              height="294"
-              alt="Image of screen shows dark modern website"
-            />
-            <h4 class="portfolio-h-title">Inspiration has no Boders</h4>
-            <p class="portfolio-description">Strona Internetowa</p>
-          </li>
-          <li>
-            <img
-              src="images/bookwithpictures.jpg"
-              width="370"
-              height="294"
-              alt="Book with pictures on pages"
-            />
-            <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
-            <p class="portfolio-description">Dizajn</p>
-          </li>
-          <li>
-            <img
-              src="images/label.jpg"
-              width="370"
-              height="294"
-              alt="Image of label project"
-            />
-            <h4 class="portfolio-h-title">Projeky LAB</h4>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/workonlaptop.jpg"
-              width="370"
-              height="294"
-              alt="images/workonlaptop.jpg"
-            />
-            <h4 class="portfolio-h-title">Growing Business</h4>
-            <p class="portfolio-description">Aplikacja</p>
-          </li>
-        </ul>
-      </section>
-      <footer>
-        <section class="down-section">
-          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
-            class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
-          <address class="down-section">
-            <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-            <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
-            <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
-          </address>
-        </section>
-      </footer>
-      </body>
-      </html>
+    </footer>
+</body>
+
+</html>
