--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="WebStudio" content="biuro projktowe + development" />
-    <title>Studio</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible"content="IE=edge" />
+  <meta name="WebStudio" content="biuro projktowe + development" />
+  <title>Studio</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+</head>
   <body>
     <header>
       <nav>
@@ -36,9 +35,7 @@
     <main>
       <section class="main-button-place">
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <a href="portfolio.html">
-          <button class="main-button" type="button">Zamów usługe</button>
-        </a>
+        <button class="main-button" type="button">Zamów usługe</button>
       </section>
       <section>
         <ul class="lorem-list">
