--- a/portfolio.html
+++ b/portfolio.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible"content="IE=edge" />
   <meta name="WebStudio" content="biuro projktowe + development" />
   <title>Studio</title>
-  <link rel="stylesheet" href="CSS/styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
 </head>
-
 <body>
   <header>
     <nav>
@@ -29,19 +29,19 @@
       <!-- sekcja, która zawiera listę przycisków -->
       <ul class="portfolio-button-list">
         <li>
-          <a href="portfolio.html"><button class="portfolio-button" type="button">Wszystkie</button></a>
+          <button class="portfolio-button" type="button">Wszystkie</button></a>
         </li>
         <li>
-          <a href="portfolio.html"><button class="portfolio-button" type="button">Strony</button></a>
+          <button class="portfolio-button" type="button">Strony</button></a>
         </li>
         <li>
-          <a href="portfolio.html"><button class="portfolio-button" type="button">Aplikacje</button></a>
+          <button class="portfolio-button" type="button">Aplikacje</button></a>
         </li>
         <li>
-          <a href="portfolio.html"><button class="portfolio-button" type="button">Dizajn</button></a>
+          <button class="portfolio-button" type="button">Dizajn</button></a>
         </li>
         <li>
-          <a href="portfolio.html"><button class="portfolio-button" type="button">Marketing</button></a>
+          <button class="portfolio-button" type="button">Marketing</button></a>
         </li>
       </ul>
     </section>
