--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible"content="IE=edge" />
-  <meta name="WebStudio" content="biuro projktowe + development" />
-  <title>Studio</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="WebStudio" content="biuro projktowe + development" />
+    <title>Studio</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet" />
+  </head>
   <body>
     <header>
       <nav>
-        <a class="header-logo-blue" target="_self" href="index.html"
-          ><span>Web</span></a
-        ><a class="header-logo-right" target="_self" href="index.html"
-          ><span>Studio</span></a
-        >
-        <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio" href="portfolio.html"
-          ><span>Portfolio</span></a
-        >
-        <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
+        <a class="header-logo-blue" target="_self" href="index.html">
+          <span>Web</span>
+        </a>
+        <a class="header-logo-right" target="_self" href="index.html">
+          <span>Studio</span>
+        </a>
+        <a class="header-agency" href="agencja.html">
+          <span>Agencja</span>
+        </a>
+        <a class="header-portfolio" href="portfolio.html">
+          <span>Portfolio</span>
+        </a>
+        <a class="header-contact" href="kontakt.html">
+          <span>Kontakt</span>
+        </a>
       </nav>
-      <a class="header-links-contact" href="mailto:info@devstudio.com"
-        ><span>info@devstudio.com</span></a
-      >
-      <a class="header-links-contact" href="tel:48111111111"
-        ><span>+48 111 111 111</span></a
-      >
+      <a class="header-links-contact" href="mailto:info@devstudio.com">
+        <span>info@devstudio.com</span>
+      </a>
+      <a class="header-links-contact" href="tel:48111111111">
+        <span>+48 111 111 111</span>
+      </a>
     </header>
+    s
     <main>
       <section class="main-button-place">
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
@@ -43,8 +50,8 @@
             <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </div>
           </li>
@@ -52,8 +59,8 @@
             <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </div>
           </li>
@@ -61,8 +68,8 @@
             <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </div>
           </li>
@@ -70,8 +77,8 @@
             <div>
               <h4 class="lorem-h-four">LOREM IPSUM</h4>
               <p class="lorem-four">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </div>
           </li>
@@ -85,24 +92,21 @@
               src="images/whatwedoone.jpg"
               width="370"
               height="294"
-              alt="projecting and coding at the desk"
-            />
+              alt="projecting and coding at the desk" />
           </li>
           <li>
             <img
               src="images/whatwedotwo.jpg"
               width="370"
               height="294"
-              alt="projecting and coding for mobile device"
-            />
+              alt="projecting and coding for mobile device" />
           </li>
           <li>
             <img
               src="images/whatwedothree.jpg"
               width="370"
               height="294"
-              alt="projecting and coding with full colour patern"
-            />
+              alt="projecting and coding with full colour patern" />
           </li>
         </ul>
       </section>
@@ -114,8 +118,7 @@
               src="images/productdesigner.jpg"
               width="270"
               height="260"
-              alt="personal photo of product designer"
-            />
+              alt="personal photo of product designer" />
             <h3 class="team-name">John Doe</h3>
             <p class="team-role">Product Designer</p>
           </li>
@@ -124,8 +127,7 @@
               src="images/frontenddeveloper.jpg"
               width="270"
               height="260"
-              alt="personal photo of Fronted Developer"
-            />
+              alt="personal photo of Fronted Developer" />
             <h3 class="team-name">John Doe</h3>
             <p class="team-role">Frontend Developer</p>
           </li>
@@ -134,8 +136,7 @@
               src="images/marketing.jpg"
               width="270"
               height="260"
-              alt="personal photo of Marketing role person"
-            />
+              alt="personal photo of Marketing role person" />
             <h3 class="team-name">John Doe</h3>
             <p class="team-role">Marketing</p>
           </li>
@@ -144,8 +145,7 @@
               src="images/uidesigner.jpg"
               width="270"
               height="260"
-              alt="personal photo of UI designer"
-            />
+              alt="personal photo of UI designer" />
             <h3 class="team-name">John Doe</h3>
             <p class="team-role">UI Designer</p>
           </li>
@@ -153,20 +153,15 @@
       </section>
     </main>
     <footer>
-      <section class="down-section">
-        <a class="header-logo-blue" target="_self" href="index.html"
-          ><span>Web</span></a
-        ><a class="header-logo-right-down" target="_self" href="index.html"
-          ><span>Studio</span></a
-        >
+      <div class="down-section">
+        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a
+        ><a class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
         <address class="down-section">
           <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-          <a class="down-section-email" href="mailto:info@example.com"
-            >info@example.com</a
-          >
+          <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
           <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
         </address>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
