--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible"content="IE=edge" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="WebStudio" content="biuro projktowe + development" />
   <title>Studio</title>
   <link rel="stylesheet" href="css/styles.css" />
@@ -79,34 +79,34 @@
           <img src="images/darkscreen.jpg" width="370" height="294" alt="Image of screen shows dark modern website" />
           <h4 class="portfolio-h-title">Inspiration has no Boders</h4>
           <p class="portfolio-description">Strona Internetowa</p>
-        </li>
+              </li>
         <li>
-          <img src="images/bookwithpictures.jpg" width="370" height="294" alt="Book with pictures on pages" />
-          <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
+                <img src="images/bookwithpictures.jpg" width="370" height="294" alt="Book with pictures on pages" />
+                <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
           <p class="portfolio-description">Dizajn</p>
-        </li>
+         </li>
         <li>
-          <img src="images/label.jpg" width="370" height="294" alt="Image of label project" />
-          <h4 class="portfolio-h-title">Projeky LAB</h4>
-          <p class="portfolio-description">Marketing</p>
+          <im g src="images/label.jpg" width="370" height="294" alt="Image of label project" />
+                    <h4 class="portfolio-h-title">Projeky LAB</h4>
+                   <p class="portfolio-description">Marketing</p>
         </li>
         <li>
           <img src="images/workonlaptop.jpg" width="370" height="294" alt="images/workonlaptop.jpg" />
           <h4 class="portfolio-h-title">Growing Business</h4>
           <p class="portfolio-description">Aplikacja</p>
-        </li>
+          </li>
       </ul>
-    </section>
+    </  section>
     <footer>
-      <section class="down-section">
-        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
+      <div class="down-section">
+          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a
           class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
         <address class="down-section">
           <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
           <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
-          <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
+          <   a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
         </address>
-      </section>
+      </div>
     </footer>
 </body>
 
